# neotreade3

./: .gitignore  CLAUDE.md  HANDOVER_DETAILED.md  HandOver20260530_Detailed.md  LICENSE  NeoTrade3实施交接文档.md  PROJECT_STATUS.md  README.md  analyze_market_regime.py  com.neotrade3.api_probe_norm.plist  com.neotrade3.api_probe_raw.plist  dashboard_server.py  generate_handover.js  lowfreq_engine_v15_final.py  lowfreq_engine_v16_advanced.py  lowfreq_engine_v3.py  pyproject.toml  run_autore.py  test_v4_backtest.py  train_v4_model.py  开发团队执行规范.docx  量化交易系统详细技术方案.docx
apps/: __init__.py
docs/: README.md  user_manual.md
neotrade3/: config_contracts.py  strategy_config.py  strategy_exports.py
neotrade3-dashboard/: DEPLOY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
neotrade3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: backfill_chaos_daily_snapshot_all_a_share.py  backup_neotrade_daily.py  brainstorm_server.py  build_chaos_daily_snapshot.py  cleanup_runtime_outputs.py  eval_hazard_v0_t2_recent2y.py  fetch_20260525_data.py  fetch_525_eastmoney.py  generate_lowfreq_research_report_assets.py  generate_lowfreq_top200_attribution_report.py  generate_lowfreq_top200_process_research_report.py  install_launchagents.py  run_chaos_factor_health_report.py  run_chaos_focus_board.py  run_chaos_full_history_backtest.py  run_chaos_m4_eval_monitor_rolling.py  run_chaos_m4_eval_monitor_rolling_series.py  run_chaos_m5_tune_weights_v1.py  run_chaos_m5_tune_weights_v1_rolling.py  run_chaos_midterm_validation.py  start-server.sh  (+6 more)
(+1007 files in other folders)
