[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neotrade3"
version = "0.1.0"
description = "NeoTrade3 bootstrap project"
requires-python = ">=3.10,<3.11"
dependencies = [
  "numpy>=1.23.0",
  "reportlab>=4.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "bandit>=1.7.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
ml = [
  "scikit-learn>=1.3.0",
]
scheduler = [
  "APScheduler>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neotrade3*", "apps*"]
exclude = ["config*", "docs*", "var*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
force-exclude = '\.json$'

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
